<resources>
    <string name="app_name">SqlLiteTp</string>
    <string name="etudiants">Etudiants</string>
    <string name="nom">Nom :</string>
    <string name="nomEdit">Nom</string>
    <string name="prenom">Prénom :</string>
    <string name="prenomEdit">Prenom</string>
    <string name="addBtn">Ajouter</string>
    <string name="id_etud">Id_Etud</string>
    <string name="findBtn">Chercher</string>
    <string name="nom_prenom">nom prenom</string>
    <string name="deleteBtn">Supprimer</string>
    <string name="afficher_tous_les_etudiants">Afficher tous les etudiants</string>
    <string name="date_de_naissance">Date naissance :</string>
    <string name="s_lectionner_une_date">Sélectionner une date</string>
    <string name="pr_nom">Prénom :</string>
    <string name="id">ID :</string>
</resources>