<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="34dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/design_default_color_primary_variant"
            android:padding="10dp"
            android:text="@string/etudiants"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Image"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingHorizontal="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:paddingHorizontal="20sp">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginRight="40sp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <Button
                android:id="@+id/btn_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:onClick="selectImage"
                android:backgroundTint="@color/design_default_color_secondary"
                android:text="Choisir une image" />
        </LinearLayout>

        <TextView
            android:paddingHorizontal="20sp"
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/nom"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:paddingHorizontal="20sp"
            android:id="@+id/nom_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/nomEdit"
            android:inputType="text" />

        <TextView
            android:paddingHorizontal="20sp"
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prenom"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:paddingHorizontal="20sp"
            android:id="@+id/prenom_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenomEdit"
            android:inputType="text" />

        <TextView
            android:paddingHorizontal="20sp"
            android:id="@+id/date_naissance_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_de_naissance"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:paddingHorizontal="20sp"
            android:id="@+id/date_naissance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:onClick="showDatePicker"
            android:hint="@string/s_lectionner_une_date" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:onClick="ajouter"
            android:text="@string/addBtn"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:paddingHorizontal="20sp"
            android:id="@+id/id_Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_etud"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_light"
                android:onClick="chercher"
                android:text="@string/findBtn"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:backgroundTint="@color/design_default_color_error"
                android:onClick="supprimer"
                android:text="@string/deleteBtn"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:paddingHorizontal="20sp"
            android:id="@+id/resultat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginHorizontal="20sp"
            android:backgroundTint="@color/design_default_color_primary_variant"
            android:onClick="afficher"
            android:text="@string/afficher_tous_les_etudiants"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>