<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/nom_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomEdit" />

    <EditText
        android:id="@+id/prenom_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prenomEdit" />

    <EditText
        android:id="@+id/date_naissance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/s_lectionner_une_date"
        android:focusable="false"
        android:clickable="true" />

    <Button
        android:id="@+id/select_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sélectionner une date" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/select_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sélectionner une image" />
</LinearLayout>